--- a/estilos/style.css
+++ b/estilos/style.css
@@ -85,8 +85,8 @@ h2.subtitulo {
     font-size: 1.5rem;
 }
 
-div.botao a {
-    width: 50%;
+.botao_link {
+    width: 80%;
     height: 79px;
     padding: 21.5px 0px;
 
@@ -150,14 +150,6 @@ div.botao a:hover {
 
     section.apresentacao__conteudo {
         width: auto;
-    }
-
-    div.botao a {
-        width: 80%;
-    }
-
-    div.botao a > img {
-        width: 50%;
     }
 
     .apresentacao_imagem {
